<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amir_operation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="210447030@ccmailg.meijo-u.ac.jp">dars</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>amir_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>behavior_tree_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>Eigen3</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>line_msg</depend>
  <depend>bebop_msgs</depend>
  <depend>ros2_aruco_interfaces</depend>
  <depend>ar_track_alvar_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
